# cli-ports-manager

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  rustfmt.toml
.github/: CODEOWNERS  REPOSITORY.md  setup-repo.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/scripts/: update-homebrew-formula.sh
.github/workflows/: ci.yml  release.yml  security.yml
src/: config.rs  main.rs  port_finder.rs
